k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmgr-backend
  namespace: taskmgr
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskmgr-backend
  template:
    metadata:
      labels:
        app: taskmgr-backend
    spec:
      containers:
      - name: taskmgr-backend
        image: durai2627/taskmgr-backend:1.95
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 30
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: taskmgr-backend
  namespace: taskmgr
spec:
  selector:
    app: taskmgr-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
